# deltalake-ui

./: .gitignore  Cargo.toml  buf.gen.yaml  compose.yaml  justfile  openapi.json  package-lock.json  package.json  pyproject.toml  requests.ipynb  tsconfig.json
app/: flight-client.d.ts  next.config.js  package.json  tsconfig.json
app/src/: connect.ts
app/src/api/: connect.ts
app/src/app/: Studio.tsx  providers.tsx
app/src/app/delta-sharing/: DeltaServerCard.tsx  layout.tsx  page.tsx
app/src/app/delta-sharing/[id]/: AddShareCard.tsx  ShareCard.tsx  layout.tsx  page.tsx
app/src/app/query/: Chart.tsx  Editor.tsx  page.tsx
app/src/app/query/Sidebar/: CatalogTreeItemLayout.tsx  (+2 more)
app/src/clients/: index.ts  types.ts
app/src/clients/delta-sharing/: client.ts  context.ts  index.ts  types.ts
app/src/clients/flight/: index.ts
app/src/components/: Error.tsx  Loading.tsx  ThemeProvider.tsx  constants.ts
app/src/icons/: DeltaSharing.tsx  GraphQL.tsx  index.ts  props.ts
app/src/pages/api/: [[...connect]].ts
data/: taxi_zones_geo.json
lakehouse/: __init__.py
lakehouse/assets/: __init__.py
lakehouse/assets/core/: __init__.py  id_range_for_time.py  items.py
lakehouse/assets/recommender/: comment_stories.py  recommender_model.py  user_story_matrix.py  user_top_recommended_stories.py
lakehouse/assets/taxi/: __init__.py  aggregate.py  cleaned.py  constants.py  data.py  merged.py  meta.py  raw.py
lakehouse/resources/: __init__.py  store.py
lakehouse/sensors/: __init__.py
notebooks/: download.ipynb  prepare.ipynb  requests.ipynb  tables.ipynb  taxi.ipynb  timestamps.ipynb
proto/arrow-flight/: buf.yaml
proto/lakehouse-data/: buf.yaml
scripts/: profile.py
scripts/profiles/: acero.html  acero_merge.html  acero_stats.html  arrow.html  arrow_merge.html  arrow_stats.html
src/: connect.ts
src/app/: Studio.tsx  layout.tsx  page.tsx  providers.tsx
src/app/delta-sharing/: AddServerCard.tsx  DeltaServerCard.tsx  layout.tsx  page.tsx
src/app/delta-sharing/[id]/: AddShareCard.tsx  ShareCard.tsx  layout.tsx  page.tsx
src/clients/delta-sharing/: client.ts  context.ts  index.ts  types.ts
src/components/: Header.tsx  Loading.tsx  ResizePanel.tsx  Studio.tsx  ThemeProvider.tsx  index.ts
src/components/settings/: AddServiceCard.tsx  Appearnace.tsx  index.ts
src/components/sharing/: AddShareCard.tsx  ShareCard.tsx  SharingServerDetails.tsx  context.ts  index.ts
src/icons/: DeltaSharing.tsx  Deltalake.tsx  Kusto.tsx
typings/pyarrow/: __init__.pyi  compute.pyi  dataset.pyi  flight.pyi  lib.pyi
(+11 files in other folders)
