[tool.poetry]
name = "lakehouse"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<=3.11"
dagster = "^1.5.9"
dagster-webserver = "^1.5.9"
# dagster-deltalake = "^0.21.9"
# dagster-deltalake-pandas = "^0.21.9"
# dagster-deltalake-polars = "^0.21.9"
dagster-deltalake = { path = "../dagster/python_modules/libraries/dagster-deltalake", develop = true }
dagster-deltalake-pandas = { path = "../dagster/python_modules/libraries/dagster-deltalake-pandas", develop = true }
dagster-deltalake-polars = { path = "../dagster/python_modules/libraries/dagster-deltalake-polars", develop = true }
scikit-learn = "^1.3"
scipy = "^1.9"
object-store-python = "^0.1.10"
shapely = "^2.0.2"
geopandas = "^0.14.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
ipykernel = "^6.25.1"
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
polars = ">=0.19.13"
ruff = "^0.1.6"
memray = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
